# clawshield

./: .gitattributes  .gitignore  Milestones.md  README.md  pyproject.toml
.github/workflows/: ci.yml
clawshield/: __main__.py
clawshield/core/: condition.py  engine.py  models.py
clawshield/policies/: vps_public.yaml
clawshield/runtimes/openclaw/: adapter.py
clawshield/scanners/: docker.py
clawshield/scanners/openclaw/: config.py  permissions.py  secrets.py
planning/: 01_product_vision.md  02_architecture.md  03_policy_schema.yaml  04_mvp_scope.md  05_non_goals.md  06_technical_constraints.md  07_mvp_implementation_plan.md
tests/: test_cli.py  test_condition.py  test_docker_scanner.py  test_engine.py  test_permissions_scanner.py  test_scanner.py  test_secrets_scanner.py  test_version.py
tests/fixtures/: openclaw_no_auth.json  openclaw_safe.json  openclaw_safe.yaml  openclaw_string_bools.yaml  openclaw_string_true.yaml  openclaw_vulnerable.json  openclaw_vulnerable.yaml
